# TaxCaculator

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js
.github/workflows/: ci.yml  release.yml
.trae/specs/add-batch-person-calculation/: checklist.md  spec.md  tasks.md
.trae/specs/build-tax-calculator/: checklist.md  spec.md  tasks.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  tax_engine.rs
src/components/layout/: Header.tsx  MainLayout.tsx  Sidebar.tsx
src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  InputField.tsx  Table.tsx  Toast.tsx  Toggle.tsx
src/context/: ThemeContext.tsx
src/pages/: AnnualPage.tsx  BatchPage.tsx  ComparePage.tsx  ForwardPage.tsx  ReversePage.tsx
src/utils/: batch-csv.ts  export.ts  validation.ts
